# RealTimeCutVADLibraryForAndroid

./: .gitignore  LICENSE  README.md  jitpack.yml  memo.txt  settings.gradle.kts
app/: build.gradle.kts
app/src/androidTest/java/io/codeconcept/realtimecutvadsampleapp/: ExampleInstrumentedTest.kt
app/src/main/: AndroidManifest.xml
app/src/main/java/io/codeconcept/realtimecutvadsampleapp/: MainActivity.kt
app/src/main/java/io/codeconcept/realtimecutvadsampleapp/ui/theme/: Color.kt  Theme.kt  Type.kt
app/src/main/res/values/: strings.xml  themes.xml
app/src/test/java/io/codeconcept/realtimecutvadsampleapp/: ExampleUnitTest.kt
gradle/: libs.versions.toml
gradle/wrapper/: gradle-wrapper.properties
realtimecutvadlibrary/: build.gradle.kts
realtimecutvadlibrary/src/androidTest/java/io/codeconcept/realtimecutvadlibrary/: ExampleInstrumentedTest.java  VADWrapperTest.java
realtimecutvadlibrary/src/main/: README.txt
realtimecutvadlibrary/src/main/cpp/: CMakeLists.txt  vad-wrapper.cpp
realtimecutvadlibrary/src/main/java/io/codeconcept/realtimecutvadlibrary/: ResourceHelper.java  VADCallback.java  VADWrapper.java
realtimecutvadlibrary/src/test/java/io/codeconcept/realtimecutvadlibrary/: ExampleUnitTest.java
